ags (0.9.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_lv2_option_manager_lookup_extended()
	* implemented ags_lv2_plugin_event_buffer_alloc()
	* implemented ags_lv2_plugin_event_buffer_realloc_data()
	* implemented ags_lv2_plugin_event_buffer_concat()
	* implemented ags_synth_util_get_xcross_count() and related type specific implementations
	* implemented ags_synth_generator_compute()
	* implemented ags_synth_generator_compute_with_audio_signal()
	* deprecated ags_lv2_plugin_alloc_event_buffer()
	* deprecated ags_lv2_plugin_concat_event_buffer()
	* implemented ags_lv2_urid_manager_unmap()
	* implemented AgsSyncsynth in order to have true notation available to a synth
	* implemented ags_synth_generator_compute()
	* implemented ags_synth_generator_compute_with_audio_signal()
	* refactored AgsOscillator in order to be reusable
	* refactored AgsApplySynth task to use new synth generator functions
	* completed missing gtk-doc comments in ags_input.c and other files
	* fixed AgsExportSoundcard to don't add device as being NULL
	* fixed ags_lv2_option_manager_get_option() to lookup correctly
	* fixed ags_lv2_option_manager_set_option() to lookup correctly
	* new unit-test ags_lv2_option_manager_test.c
	* new unit-test ags_lv2_plugin_test.c
	* new unit-test ags_lv2_preset_test.c
	* new unit-test ags_lv2_uri_map_manager_test.c
	* new unit-test ags_lv2_urid_manager_test.c
	* new unit-test ags_lv2_worker_manager_test.c
	* new unit-test ags_lv2ui_manager_test.c
	* new unit-test ags_lv2ui_plugin_test.c
	* new unit-test ags_audio_connection_test.c
	* disabled new unit-test ags_input_test.c because not tested

ags (0.9.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented new task AgsResetPeak
	* implemented ags_audio_buffer_util_peak() and related
	* refactored ags-peak recall to use above and compute only as needed

ags (0.9.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]